application/brennoflavio/forgejo-mcp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-mcp
  namespace: forgejo-mcp
spec:
  type: ClusterIP
  selector:
    app: forgejo-mcp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
